--- a/.vaadin-designer2/designer-theme.css
+++ b/.vaadin-designer2/designer-theme.css
@@ -1531,6 +1531,144 @@ div.v-layout.v-horizontal.v-widget {
 	vertical-align: top;
 }
 
+.dark .form-template {
+	overflow-x: hidden;
+	overflow-y: scroll;
+	padding: 18.5px;
+	min-width: 320px;
+}
+
+.dark .form-template .title {
+	font-size: 19.2px;
+	font-weight: 600;
+	padding-bottom: 18.5px;
+}
+
+.dark .form-template .v-caption-form-section {
+	text-transform: uppercase;
+	font-size: 12.8px;
+	color: #f6f6f4;
+	font-weight: 600;
+	padding-bottom: 0;
+	width: 100%;
+}
+
+.dark .form-template .input-wrapper {
+	padding: 9.25px;
+	line-height: 37px;
+}
+
+.dark .form-template .input-group {
+	width: 100%;
+}
+
+.dark .form-template .text-wrapper {
+	padding: 18.5px;
+	background: #4b4b34;
+}
+
+.dark .form-template .form-section {
+	padding: 9.25px 0 37px;
+	width: 100%;
+	border-top: 1px solid #232318;
+}
+
+.dark .form-template .input-wrapper .v-caption {
+	display: block;
+}
+
+.dark .form-template .v-button.borderless {
+	color: #e5e514;
+}
+
+.dark .form-template .input-wrapper .v-widget + .v-widget {
+	margin-left: 18.5px;
+}
+
+.dark .form-template .align-bottom {
+	vertical-align: bottom;
+}
+
+.dark .form-template .border {
+	border: 1px solid #28281b;
+	margin: 9.25px 0;
+}
+
+.dark .form-template[width-range~="-550px"] .input-wrapper {
+	width: 100%;
+}
+
+.dark .form-template[width-range~="551px-"] .caption-left .input-wrapper .v-caption {
+	display: inline-block;
+	height: 37px;
+	line-height: 37px;
+	padding-right: 6.16667px;
+	padding-bottom: 0;
+	vertical-align: top;
+}
+
+.dark .form-template[width-range~="551px-"] .caption-left .input-wrapper .v-caption.v-caption-tiny {
+	height: 28px;
+	line-height: 28px;
+}
+
+.dark .form-template[width-range~="551px-"] .caption-left .input-wrapper .v-caption.v-caption-small {
+	height: 31px;
+	line-height: 31px;
+}
+
+.dark .form-template[width-range~="551px-"] .caption-left .input-wrapper .v-caption.v-caption-large {
+	height: 44px;
+	line-height: 44px;
+}
+
+.dark .form-template[width-range~="551px-"] .caption-left .input-wrapper .v-caption.v-caption-huge {
+	height: 59px;
+	line-height: 59px;
+}
+
+.dark .form-template[width-range~="551-750px"] .input-wrapper {
+	width: 50%;
+}
+
+.dark .form-template[width-range~="551-750px"] .caption-left .input-wrapper {
+	width: 100%;
+}
+
+.dark .form-template[width-range~="551-750px"] .caption-left .input-wrapper  > .v-widget {
+	width: 65% !important;
+	float: right;
+}
+
+.dark .form-template[width-range~="551-750px"] .caption-left .input-wrapper  > .v-caption {
+	text-align: right;
+	width: 35%;
+	box-sizing: border-box;
+}
+
+.dark .form-template[width-range~="-750px"] .title, .dark .form-template[width-range~="-750px"] .v-caption-form-section {
+	text-align: center;
+}
+
+.dark .form-template[width-range~="-750px"] .input-wrapper .v-datefield, .dark .form-template[width-range~="-750px"] .v-textfield, .dark .form-template[width-range~="-750px"] .v-filterselect, .dark .form-template[width-range~="-750px"] .v-textarea {
+	width: 100%;
+}
+
+.dark .form-template[width-range~="-750px"] .input-wrapper .v-widget + .v-widget {
+	margin-left: 0;
+	margin-top: 9.25px;
+}
+
+.dark .form-template[width-range~="-750px"] .input-group {
+	margin-bottom: 18.5px;
+}
+
+.dark .form-template[width-range~="-750px"] .v-captiontext {
+	text-overflow: ellipsis;
+	overflow: hidden;
+	width: 100%;
+}
+
 .dark.v-app, .dark.v-app-loading {
 	font: 300 16px/1.55 "Open Sans", sans-serif;
 	color: #c9c9bb;
